Changed the way tocken passed in /client endpoint.
